--- a/package.json
+++ b/package.json
@@ -23,23 +23,17 @@
     "@microsoft/office-js": "^1.1.36",
     "@microsoft/office-js-helpers": "^1.0.1",
     "@ng-bootstrap/ng-bootstrap": "~5.2.2",
-    "@types/html-pdf": "^2.2.0",
-    "@types/jspdf": "^1.3.3",
     "angular-material-icons": "^0.7.1",
     "buffer": "^5.4.3",
-    "html-pdf": "^2.2.0",
-    "html2canvas": "^1.0.0-rc.5",
-    "jspdf": "^1.5.3",
     "ng-modal": "^1.0.2",
     "ngx-snackbar": "^2.0.1",
     "ngx-spinner": "^8.1.0",
-    "office-ui-fabric-js": "^1.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.1",
+    "@angular-devkit/build-angular": "^0.1000.5",
     "@angular/cli": "~8.3.6",
     "@angular/compiler-cli": "~8.1.1",
     "@angular/language-service": "~8.1.1",
